css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: Inria Serif;
}

body {
    background-color: #f0f0f0;
    display: flex;
    justify-content: center;
    height: 100vh;
    align-items: center;
    padding: 20px;
}

.container {
    background-color: #ffffff;
    border-radius: 10px;
    overflow: hidden;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    max-width: 100%;
    width: 100%;
}

.header {
    background-color: #59A4E3;
    color: #FFFFFF;
    padding: 20px;
    text-align: center;
}

.logo {
    background-color: #FFFFFF;
    border-radius: 50%;
    width: 40%;
    height: auto;
    max-width: 60px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto 10px;
}

.logo img {
    width: 60px;
    height: 60px;
}

.company-name {
    font-size: 28px;
    margin-bottom: 5px;
}

.title {
    font-size: 34px;
    font-weight: bold;
}

.content {
    display: flex;
    justify-content: space-around;
    padding: 20px;
}

.section {
    flex: 1;
    margin: 0 10px;
}

.section-header {
    background-color: #E3595F;
    color: #FFFFFF;
    padding: 20px;
    text-align: center;
    font-weight: bold;
    border-radius: 5px;
    font-size: 30px;
}

.data-item {
    background-color: #f0f0f0;
    padding: 20px;
    margin-bottom: 10px;
    border-radius: 5px;
    text-align: center;
}

.temp {
    font-size: 28px;
    font-weight: bold;
    margin-bottom: 10px;
    color: #1a2292;
}

.humid {
    font-size: 28px;
    font-weight: bold;
    margin-bottom: 10px;
    color: #10b61e;
}

.location {
    color: #f12323;
    font-weight: bold;
    font-size: 25px;
}

/* MEDIA QUERY FOR MOBILE */
@media (max-width: 768px) {
    .company-name {
        font-size: 20px;
    }

    .title {
        font-size: 24px;
    }

    .logo {
        height: 40px;
        width: 40px;
    }
    
    .content {
        flex-direction: column;
    }

    .section {
        margin: 0 0 20px 0;
    }

    .section-header {
        cursor: pointer;
    }

    .section:not(.active) .data-item {
        display: none;
    }

    .section.active .section-header {
        border-radius: 5px;
    }

    .section.active .data-item {
        display: block;
    }
}

